added CSS styling

--- a/index.html
+++ b/index.html
@@ -6,21 +6,25 @@
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
 </head>
 <body>
-	<h1>DON'T KILL YOUR LITTLE GUY</h1>
-
-	<h2>You must keep him alive by feeding him, playing with him, and turning the lights off before his blood lust runs rampant</h2>
-
-	<h4>Hunger</h4>
-	<h4>Sleepiness</h4>
-	<h4>Boredom</h4>
-	<h4>Blood Lust</h4>
-
-	<img src="https://hips.htvapps.com/htv-prod-media.s3.amazonaws.com/ibmig/cms/image/khbs/16471046-steve-harvey-jpg.jpg?crop=1xw:1.00000000000000000xh;center,top&resize=900:*">
+	<div class="properties">
+		<h4>Hunger</h4>
+		<h4>Sleepiness</h4>
+		<h4>Boredom</h4>
+		<h4>Blood Lust</h4>
+	</div>
 
 	<div class="buttons">
-		<button>Feed me plz</button>
-		<button>Turn off the fkn lights</button>
-		<button>Make a playing with me</button>
+		<button>FOOD PLZ</button>
+		<button>IT'S TOO BRIGHT!!</button>
+		<button>PLAY WIT ME</button>
+	</div>
+
+	<div class="sprite">
+		
+		
+		<img src="http://rs271.pbsrc.com/albums/jj127/Ariand54321/King%20Dedede/437471.gif~c200">
+
+		
 	</div>
 <script type="text/javascript" src="javascript/app.js"></script>
 </body>
