event listeners work

--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
 	</div>
 
 	<div class="buttons">
-		<button>FOOD PLZ</button>
-		<button>IT'S TOO BRIGHT!!</button>
-		<button>PLAY WIT ME</button>
+		<button id="food">FOOD PLZ</button>
+		<button id="lights">IT'S TOO BRIGHT!!</button>
+		<button id="play">PLAY WIT ME</button>
 	</div>
 
 	<div class="sprite">
 		
-		
+
 		<img src="http://rs271.pbsrc.com/albums/jj127/Ariand54321/King%20Dedede/437471.gif~c200">
 
-		
+
 	</div>
 <script type="text/javascript" src="javascript/app.js"></script>
 </body>
