values update on screen with interval

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 </head>
 <body>
 	<div class="properties">
-		<h4>Hunger</h4>
-		<h4>Sleepiness</h4>
-		<h4>Boredom</h4>
-		<h4>Blood Lust</h4>
+		<h4 id="hunger">Hunger</h4>
+		<h4 id="sleepiness">Sleepiness</h4>
+		<h4 id="boredom">Boredom</h4>
+		<h4 id="bloodLust">Blood Lust</h4>
 	</div>
 
 	<div class="buttons">
