age updating on screen

--- a/index.html
+++ b/index.html
@@ -6,11 +6,15 @@
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
 </head>
 <body>
+	<div class="age">
+		<h3 id="age">Age: 0</h3>
+	</div>
+
 	<div class="properties">
-		<h4 id="hunger">Hunger</h4>
-		<h4 id="sleepiness">Sleepiness</h4>
-		<h4 id="boredom">Boredom</h4>
-		<h4 id="bloodLust">Blood Lust</h4>
+		<h4 id="hunger">Hunger: </h4>
+		<h4 id="sleepiness">Sleepiness: </h4>
+		<h4 id="boredom">Boredom: </h4>
+		<h4 id="bloodLust">Blood Lust: </h4>
 	</div>
 
 	<div class="buttons">
