created update values method to dynamically update statswithout delay

--- a/index.html
+++ b/index.html
@@ -10,11 +10,20 @@
 		<h3 id="age">Age: 0</h3>
 	</div>
 
+	<div id="input">
+		<h2>Put your little guy's name here</h2>
+		<input type="text" name="pet name">
+	</div>
+	
 	<div class="properties">
 		<h4 id="hunger">Hunger: </h4>
 		<h4 id="sleepiness">Sleepiness: </h4>
 		<h4 id="boredom">Boredom: </h4>
 		<h4 id="bloodLust">Blood Lust: </h4>
+	</div>
+
+	<div class="name">
+		<h1 id="name"></h1>
 	</div>
 
 	<div class="buttons">
