--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<h2>Put your little guy's name here</h2>
 		<input type="text" name="pet name">
 	</div>
-	
+
 	<div class="properties">
 		<h4 id="hunger">Hunger: </h4>
 		<h4 id="sleepiness">Sleepiness: </h4>
@@ -35,7 +35,7 @@
 	<div class="sprite">
 		
 
-		<img src="http://rs271.pbsrc.com/albums/jj127/Ariand54321/King%20Dedede/437471.gif~c200">
+		<img id="dedede" src="http://rs271.pbsrc.com/albums/jj127/Ariand54321/King%20Dedede/437471.gif~c200">
 
 
 	</div>
