morph methods work as age increases

--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
 		<h1 id="name"></h1>
 	</div>
 
+	<div>
+		<h3 class="gameOver"></h3>
+	</div>
+
 	<div class="buttons">
 		<button id="food">FOOD PLZ</button>
 		<button id="lights">IT'S TOO BRIGHT!!</button>
