--- a/index.html
+++ b/index.html
@@ -6,13 +6,18 @@
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
 </head>
 <body>
+	<div class="name">
+		<h1 id="name"></h1>
+	</div>
+
 	<div class="age">
 		<h3 id="age">Age: 0</h3>
 	</div>
 
 	<div id="input">
 		<h2>Put your little guy's name here</h2>
-		<input type="text" name="pet name">
+		<input type="text" name="nameBox" id="nameBox">
+		<button id="submit">SUBMIT</button>
 	</div>
 
 	<div class="properties">
@@ -20,10 +25,6 @@
 		<h4 id="sleepiness">Sleepiness: </h4>
 		<h4 id="boredom">Boredom: </h4>
 		<h4 id="bloodLust">Blood Lust: </h4>
-	</div>
-
-	<div class="name">
-		<h1 id="name"></h1>
 	</div>
 
 	<div>
