--- a/index.html
+++ b/index.html
@@ -6,25 +6,28 @@
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
 </head>
 <body>
-	<div class="name">
-		<h1 id="name"></h1>
-	</div>
+	<div class="leftSide">
+		<div class="age">
+			<h3 id="age">Age: 0</h3>
+		</div>
 
-	<div class="age">
-		<h3 id="age">Age: 0</h3>
-	</div>
+		<div id="input">
+			<h2>Put your lil' guy's name here</h2>
+			<input type="text" name="nameBox" id="nameBox">
+			<button id="submit">SUBMIT</button>
+		</div>
 
-	<div id="input">
-		<h2>Put your little guy's name here</h2>
-		<input type="text" name="nameBox" id="nameBox">
-		<button id="submit">SUBMIT</button>
-	</div>
-
-	<div class="properties">
-		<h4 id="hunger">Hunger: </h4>
-		<h4 id="sleepiness">Sleepiness: </h4>
-		<h4 id="boredom">Boredom: </h4>
-		<h4 id="bloodLust">Blood Lust: </h4>
+		<div class="name">
+			<h1 id="name"></h1>
+		</div>
+	<div>
+	<div class="rightSide">
+		<div class="properties">
+			<h4 id="hunger">Hunger: </h4>
+			<h4 id="sleepiness">Sleepiness: </h4>
+			<h4 id="boredom">Boredom: </h4>
+			<h4 id="bloodLust">Blood Lust: </h4>
+		</div>
 	</div>
 
 	<div>
