added blood lust button and alternate ending

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 		<button id="food">FOOD PLZ</button>
 		<button id="lights">IT'S TOO BRIGHT!!</button>
 		<button id="play">PLAY WIT ME</button>
+		<button id="bloodThirst">SATISFY MY THIRST FOR BLOOD</button>
 	</div>
 
 	<div class="sprite">
